--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -23,7 +23,7 @@
   justify-content: space-between;
 }
 
-.header-nav--closed .main-nav__menu {
+.header-nav--closed .header-nav__menu {
   display: none;
 }
 
@@ -48,6 +48,10 @@
   &:focus-visible {
     outline: none;
   }
+}
+
+.header-nav--closed .header-nav__menu-list {
+  display: none;
 }
 
 .header-nav__toggle span {
@@ -115,7 +119,6 @@
 
 .header-nav__menu-list {
   max-width: 286px;
-  max-height: 278px;
   margin: 0;
   padding: 29px 25px 9px;
   overflow: auto;
