--- a/source/sass/blocks/programms.scss
+++ b/source/sass/blocks/programms.scss
@@ -15,11 +15,6 @@
   @include vp-767 {
     padding: 39px 15px 67px;
   }
-
-  @media (max-width: 1300px) {
-    padding-right: 5%;
-    padding-left: 5%;
-  }
 }
 
 .programms__swiper-wrapper {
@@ -220,7 +215,7 @@
     align-items: center;
     max-width: 54.1%;
     min-height: 13.1vw;
-    padding: 18px 10px 6px 14px;
+    padding: 18px 10px 6px 17px;
   }
 
   &::after {
@@ -319,19 +314,13 @@
 }
 
 .programms__slider-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: inline-flex;
+  align-items: end;
+  justify-content: right;
   width: 30px;
   height: 30px;
-
   background-color: $color-cerulean-blue;
   border-radius: 50%;
-
-  @include vp-1199 {
-    width: 3.9vw;
-    height: 3.9vw;
-  }
 
   @include vp-767 {
     width: 9.3vw;
@@ -379,16 +368,6 @@
 .programms__button-icon {
   width: 22px;
   height: 22px;
-
-  @include vp-1199 {
-    width: 1.3vw;
-    height: 1.3vw;
-  }
-
-  @include vp-767 {
-    width: 3.1vw;
-    height: 3.1vw;
-  }
 }
 
 .programms__scrollbar {
@@ -434,15 +413,11 @@
   justify-content: space-between;
   width: 54px;
   height: 22px;
-  margin-left: 1200px;
 
   bottom: 150px;
   right: 95px;
 
   @include vp-1199 {
-    width: 65px;
-    margin-left: 620px;
-
     bottom: 240px;
     right: 55px;
   }
