--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -20,11 +20,6 @@
     padding-right: 100px;
     padding-left: 100px;
   }
-
-  @media (max-width: 1300px) {
-    padding-right: 5%;
-    padding-left: 5%;
-  }
 }
 
 .reviews__swiper-wrapper {
@@ -289,12 +284,8 @@
   justify-content: space-between;
   width: 54px;
   height: 22px;
-  margin-left: 1200px;
-
-  @include vp-1199 {
-    margin-left: 640px;
-    width: 65px;
-  }
+  margin-top: 5px;
+  gap: 8px;
 
   @include vp-767 {
     margin: 0;
