--- a/source/sass/blocks/programms.scss
+++ b/source/sass/blocks/programms.scss
@@ -230,6 +230,7 @@
     background-image: url("../img/svg/angle.svg");
     background-repeat: no-repeat;
     background-size: 18px 18px;
+    transform: rotate(270deg);
   }
 }
 
