--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -21,6 +21,10 @@ $color-charcoal: #484848;
 $color-wild-watermelon: #ff5e66;
 $color-navy-blue: #0266c1;
 
+$color-photo-overlay:                    rgba(#316dc2, 20%);
+$color-form-overlay:                    rgba(#0d1d33, 40%);
+
+
 // Gradient
 
 $black-to-right: linear-gradient(
