--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -469,6 +469,10 @@
     margin-top: 0;
     margin-bottom: 12px;
   }
+
+  @media (min-width: 321px) and (max-width: 767px) {
+    padding-left: 25%;
+  }
 }
 
 .form__checkbox-label {
@@ -497,6 +501,10 @@
 
   @include vp-767 {
     top: 12px;
+  }
+
+  @media (min-width: 321px) and (max-width: 767px) {
+    top: 6px;
   }
 
   &:hover {
