--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -47,6 +47,30 @@
 }
 
 .hero__swiper-content--first {
+  background-image: url("../img/index/index2-desktop.png");
+
+  @include retina {
+    background-image: url("../img/index/index2-desktop@2x.png");
+  }
+
+  @include vp-1199 {
+    background-image: url("../img/index/index2-tablet.png");
+
+    @include retina {
+      background-image: url("../img/index/index2-tablet@2x.png");
+    }
+  }
+
+  @include vp-767 {
+    background-image: url("../img/index/index2-mobile.png");
+
+    @include retina {
+      background-image: url("../img/index/index2-mobile@2x.png");
+    }
+  }
+}
+
+.hero__swiper-content--second {
   background-image: url("../img/index/index3-desktop.png");
 
   @include retina {
@@ -68,28 +92,12 @@
       background-image: url("../img/index/index3-mobile@2x.png");
     }
   }
-}
 
-.hero__swiper-content--second {
-  background-image: url("../img/index/index2-desktop.png");
+  .hero__button {
+    margin-top: 10px;
 
-  @include retina {
-    background-image: url("../img/index/index2-desktop@2x.png");
-  }
-
-  @include vp-1199 {
-    background-image: url("../img/index/index2-tablet.png");
-
-    @include retina {
-      background-image: url("../img/index/index2-tablet@2x.png");
-    }
-  }
-
-  @include vp-767 {
-    background-image: url("../img/index/index2-mobile.png");
-
-    @include retina {
-      background-image: url("../img/index/index2-mobile@2x.png");
+    @include vp-767 {
+      margin-top: 0;
     }
   }
 }
@@ -116,28 +124,46 @@
       background-image: url("../img/index/index1-mobile@2x.png");
     }
   }
+
+  .hero__slider {
+    min-height: 89px;
+  }
+
+.hero__title {
+  @include vp-1199 {
+    padding: 30px 40px 20px;
+  }
+
+  @include vp-767 {
+    padding: 20px 14px 10px;
+  }
+
+}
 }
 
-.header-nav__menu-list--is-open .hero__swiper-content--third {
-  background-image: $black-to-right, ("../img/index/index1-desktop.png");
+.header-nav__menu-list--is-open .hero__swiper-content--third
+.header-nav__menu-list--is-open .hero__swiper-content--third,
+.header-nav__menu--is-open .hero__swiper-content--third,
+ .header-nav--is-open .hero__swiper-content--third {
+  background-image: $color-form-overlay, ("../img/index/index1-desktop.png");
 
   @include retina {
-    background-image:  $black-to-right, url("../img/index/index1-desktop@2x.png");
+    background-image: $color-form-overlay, url("../img/index/index1-desktop@2x.png");
   }
 
   @include vp-1199 {
-    background-image: $black-to-right, url("../img/index/index1-tablet.png");
+    background-image: $color-form-overlay,  url("../img/index/index1-tablet.png");
 
     @include retina {
-      background-image:  $black-to-right, url("../img/index/index1-tablet@2x.png");
+      background-image:  $color-form-overlay,  url("../img/index/index1-tablet@2x.png");
     }
   }
 
   @include vp-767 {
-    background-image: $black-to-right, url("../img/index/index1-mobile.png");
+    background-image: $color-form-overlay,  url("../img/index/index1-mobile.png");
 
     @include retina {
-      background-image: $black-to-right, url("../img/index/index1-mobile@2x.png");
+      background-image: $color-form-overlay,  url("../img/index/index1-mobile@2x.png");
     }
   }
 }
@@ -248,7 +274,7 @@
   @include vp-1199 {
     max-width: 97.2%;
     min-height: 136px;
-    padding: 30px 40px 20px;
+    padding: 35px 40px 20px;
   }
 
   @include vp-767 {
@@ -290,7 +316,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 772px;
-  min-height: 89px;
+  min-height: 99px;
   margin: 0;
   margin-top: -1px;
   padding: 0 50px 28px;
@@ -357,6 +383,14 @@
     padding: 0 14px 11px 14px;
 
     border-radius: 0 0 14px 0;
+  }
+}
+
+.hero__text--second {
+  margin-top: 5px;
+
+  @include vp-767 {
+    margin-top: 0;
   }
 }
 
