--- a/css/style.css
+++ b/css/style.css
@@ -1237,8 +1237,6 @@ button.swiper-pagination-bullet {
 
 /* required styles */
 
-/* stylelint-disable */
-
 .leaflet-pane,
 .leaflet-tile,
 .leaflet-marker-icon,
@@ -1265,6 +1263,7 @@ button.swiper-pagination-bullet {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  -webkit-user-drag: none;
 }
 
 /* Prevents IE11 from highlighting tiles in blue */
@@ -1289,8 +1288,6 @@ button.swiper-pagination-bullet {
   width: 1600px;
   height: 1600px;
   -webkit-transform-origin: 0 0;
-  -ms-transform-origin: 0 0;
-  transform-origin: 0 0;
 }
 
 .leaflet-marker-icon,
@@ -1302,11 +1299,7 @@ button.swiper-pagination-bullet {
 
 /* .leaflet-container img: map is broken in FF if you have max-width: 100% on tiles */
 
-.leaflet-container .leaflet-overlay-pane svg {
-  max-width: none !important;
-  max-height: none !important;
-}
-
+.leaflet-container .leaflet-overlay-pane svg,
 .leaflet-container .leaflet-marker-pane img,
 .leaflet-container .leaflet-shadow-pane img,
 .leaflet-container .leaflet-tile-pane img,
@@ -1314,12 +1307,6 @@ button.swiper-pagination-bullet {
 .leaflet-container .leaflet-tile {
   max-width: none !important;
   max-height: none !important;
-  width: auto;
-  padding: 0;
-}
-
-.leaflet-container img.leaflet-tile {
-  mix-blend-mode: plus-lighter;
 }
 
 .leaflet-container.leaflet-touch-zoom {
@@ -1329,6 +1316,7 @@ button.swiper-pagination-bullet {
 
 .leaflet-container.leaflet-touch-drag {
   -ms-touch-action: pinch-zoom;
+  /* Fallback for FF which doesn't support pinch-zoom */
   touch-action: none;
   touch-action: pinch-zoom;
 }
@@ -1367,10 +1355,7 @@ button.swiper-pagination-bullet {
 /* workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=888319 */
 
 .leaflet-overlay-pane svg {
-  -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 .leaflet-pane {
@@ -1426,6 +1411,7 @@ button.swiper-pagination-bullet {
   position: relative;
   z-index: 800;
   pointer-events: visiblePainted;
+  /* IE 9-10 doesn't have auto */
   pointer-events: auto;
 }
 
@@ -1479,6 +1465,10 @@ button.swiper-pagination-bullet {
 
 /* zoom and fade animations */
 
+.leaflet-fade-anim .leaflet-tile {
+  will-change: opacity;
+}
+
 .leaflet-fade-anim .leaflet-popup {
   opacity: 0;
   -webkit-transition: opacity 0.2s linear;
@@ -1495,7 +1485,7 @@ button.swiper-pagination-bullet {
   transform-origin: 0 0;
 }
 
-svg.leaflet-zoom-animated {
+.leaflet-zoom-anim .leaflet-zoom-animated {
   will-change: transform;
 }
 
@@ -1568,11 +1558,15 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 .leaflet-container {
   background: #ddd;
-  outline-offset: 1px;
+  outline: 0;
 }
 
 .leaflet-container a {
   color: #0078A8;
+}
+
+.leaflet-container a.leaflet-active {
+  outline: 2px solid orange;
 }
 
 .leaflet-zoom-box {
@@ -1583,10 +1577,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 /* general typography */
 
 .leaflet-container {
-  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  font-size: 0.75rem;
-  line-height: 1.5;
+  font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 /* general toolbar styles */
@@ -1597,7 +1588,8 @@ svg.leaflet-image-layer.leaflet-interactive path {
   border-radius: 4px;
 }
 
-.leaflet-bar a {
+.leaflet-bar a,
+.leaflet-bar a:hover {
   background-color: #fff;
   border-bottom: 1px solid #ccc;
   width: 26px;
@@ -1616,8 +1608,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
   display: block;
 }
 
-.leaflet-bar a:hover,
-.leaflet-bar a:focus {
+.leaflet-bar a:hover {
   background-color: #f4f4f4;
 }
 
@@ -1636,6 +1627,22 @@ svg.leaflet-image-layer.leaflet-interactive path {
   cursor: default;
   background-color: #f4f4f4;
   color: #bbb;
+}
+
+.leaflet-touch .leaflet-bar a {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+}
+
+.leaflet-touch .leaflet-bar a:first-child {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+
+.leaflet-touch .leaflet-bar a:last-child {
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
 }
 
 /* zoom control */
@@ -1706,8 +1713,6 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 .leaflet-control-layers label {
   display: block;
-  font-size: 13px;
-  font-size: 1.08333em;
 }
 
 .leaflet-control-layers-separator {
@@ -1726,7 +1731,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 .leaflet-container .leaflet-control-attribution {
   background: #fff;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.7);
   margin: 0;
 }
 
@@ -1734,23 +1739,19 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-control-scale-line {
   padding: 0 5px;
   color: #333;
-  line-height: 1.4;
 }
 
 .leaflet-control-attribution a {
   text-decoration: none;
 }
 
-.leaflet-control-attribution a:hover,
-.leaflet-control-attribution a:focus {
+.leaflet-control-attribution a:hover {
   text-decoration: underline;
 }
 
-.leaflet-attribution-flag {
-  display: inline !important;
-  vertical-align: baseline !important;
-  width: 1em;
-  height: 0.6669em;
+.leaflet-container .leaflet-control-attribution,
+.leaflet-container .leaflet-control-scale {
+  font-size: 11px;
 }
 
 .leaflet-left .leaflet-control-scale {
@@ -1766,11 +1767,13 @@ svg.leaflet-image-layer.leaflet-interactive path {
   border-top: none;
   line-height: 1.1;
   padding: 2px 5px 1px;
+  font-size: 11px;
   white-space: nowrap;
+  overflow: hidden;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  background: rgba(255, 255, 255, 0.8);
-  text-shadow: 1px 1px #fff;
+  background: #fff;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .leaflet-control-scale-line:not(:first-child) {
@@ -1811,16 +1814,12 @@ svg.leaflet-image-layer.leaflet-interactive path {
 }
 
 .leaflet-popup-content {
-  margin: 13px 24px 13px 20px;
-  line-height: 1.3;
-  font-size: 13px;
-  font-size: 1.08333em;
-  min-height: 1px;
+  margin: 13px 19px;
+  line-height: 1.4;
 }
 
 .leaflet-popup-content p {
-  margin: 17px 0;
-  margin: 1.3em 0;
+  margin: 18px 0;
 }
 
 .leaflet-popup-tip-container {
@@ -1828,7 +1827,6 @@ svg.leaflet-image-layer.leaflet-interactive path {
   height: 20px;
   position: absolute;
   left: 50%;
-  margin-top: -1px;
   margin-left: -20px;
   overflow: hidden;
   pointer-events: none;
@@ -1839,7 +1837,6 @@ svg.leaflet-image-layer.leaflet-interactive path {
   height: 17px;
   padding: 1px;
   margin: -10px auto 0;
-  pointer-events: auto;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -1857,27 +1854,30 @@ svg.leaflet-image-layer.leaflet-interactive path {
   position: absolute;
   top: 0;
   right: 0;
+  padding: 4px 4px 0 0;
   border: none;
   text-align: center;
-  width: 24px;
-  height: 24px;
-  font: 16px/24px Tahoma, Verdana, sans-serif;
-  color: #757575;
+  width: 18px;
+  height: 14px;
+  font: 16px/14px Tahoma, Verdana, sans-serif;
+  color: #c3c3c3;
   text-decoration: none;
+  font-weight: bold;
   background: transparent;
 }
 
-.leaflet-container a.leaflet-popup-close-button:hover,
-.leaflet-container a.leaflet-popup-close-button:focus {
-  color: #585858;
+.leaflet-container a.leaflet-popup-close-button:hover {
+  color: #999;
 }
 
 .leaflet-popup-scrolled {
   overflow: auto;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
 }
 
 .leaflet-oldie .leaflet-popup-content-wrapper {
-  zoom: 1;
+  -ms-zoom: 1;
 }
 
 .leaflet-oldie .leaflet-popup-tip {
@@ -1885,6 +1885,10 @@ svg.leaflet-image-layer.leaflet-interactive path {
   margin: 0 auto;
   -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=0.70710678, M12=0.70710678, M21=-0.70710678, M22=0.70710678)";
   filter: progid:DXImageTransform.Microsoft.Matrix(M11=0.70710678, M12=0.70710678, M21=-0.70710678, M22=0.70710678);
+}
+
+.leaflet-oldie .leaflet-popup-tip-container {
+  margin-top: -1px;
 }
 
 .leaflet-oldie .leaflet-control-zoom,
@@ -1922,7 +1926,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
 }
 
-.leaflet-tooltip.leaflet-interactive {
+.leaflet-tooltip.leaflet-clickable {
   cursor: pointer;
   pointer-events: auto;
 }
@@ -1992,8 +1996,6 @@ svg.leaflet-image-layer.leaflet-interactive path {
   margin-left: -12px;
   border-right-color: #fff;
 }
-
-/* Printing */
 
 .auto-resize-textarea {
   margin-bottom: 20px;
@@ -3165,20 +3167,29 @@ button,
 }
 
 .hero__swiper-content--first {
-  background-image: url("../img/index/index3-desktop.png");
+  background-image: url("../img/index/index2-desktop.png");
 }
 
 .hero__swiper-content--second {
-  background-image: url("../img/index/index2-desktop.png");
+  background-image: url("../img/index/index3-desktop.png");
+}
+
+.hero__swiper-content--second .hero__button {
+  margin-top: 10px;
 }
 
 .hero__swiper-content--third {
   background-image: url("../img/index/index1-desktop.png");
 }
 
-.header-nav__menu-list--is-open .hero__swiper-content--third {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.75)), color-stop(75%, rgba(0, 0, 0, 0))), "../img/index/index1-desktop.png";
-  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%), "../img/index/index1-desktop.png";
+.hero__swiper-content--third .hero__slider {
+  min-height: 89px;
+}
+
+.header-nav__menu-list--is-open .hero__swiper-content--third .header-nav__menu-list--is-open .hero__swiper-content--third,
+.header-nav__menu--is-open .hero__swiper-content--third,
+.header-nav--is-open .hero__swiper-content--third {
+  background-image: rgba(13, 29, 51, 0.4), "../img/index/index1-desktop.png";
 }
 
 .hero__swiper-block {
@@ -3279,7 +3290,7 @@ button,
   -ms-flex-align: center;
   align-items: center;
   max-width: 772px;
-  min-height: 89px;
+  min-height: 99px;
   margin: 0;
   margin-top: -1px;
   padding: 0 50px 28px;
@@ -3304,6 +3315,10 @@ button,
   margin: 0;
   padding: 0;
   background-color: #ffffff;
+}
+
+.hero__text--second {
+  margin-top: 5px;
 }
 
 .hero__text p {
@@ -3338,7 +3353,23 @@ button,
   display: none;
 }
 
-.header__overlay .header-nav__menu-list--is-open {
+.header__overlay .header-nav__menu-list--is-open,
+.header__overlay .header-nav__menu--is-open,
+.header__overlay .header-nav--is-open {
+  display: block;
+  position: absolute;
+  top: -30px;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(13, 29, 51, 0.4);
+  z-index: 1;
+  cursor: pointer;
+}
+
+.hero .header-nav__menu-list--is-open,
+.hero .header-nav__menu--is-open,
+.hero .header-nav--is-open {
   display: block;
   position: absolute;
   top: -30px;
@@ -5516,6 +5547,13 @@ button,
   -ms-border-radius: 16px;
 }
 
+.leaflet-container .leaflet-touch .leaflet-retina .leaflet-fade-anim .leaflet-grab .leaflet-touch-drag .leaflet-touch-zoom {
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+}
+
 .form {
   width: 100%;
   background-color: #f0efe9;
@@ -6464,20 +6502,25 @@ button,
   }
 
   .hero__swiper-content--first {
-    background-image: url("../img/index/index3-tablet.png");
+    background-image: url("../img/index/index2-tablet.png");
   }
 
   .hero__swiper-content--second {
-    background-image: url("../img/index/index2-tablet.png");
+    background-image: url("../img/index/index3-tablet.png");
   }
 
   .hero__swiper-content--third {
     background-image: url("../img/index/index1-tablet.png");
   }
 
-  .header-nav__menu-list--is-open .hero__swiper-content--third {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.75)), color-stop(75%, rgba(0, 0, 0, 0))), url("../img/index/index1-tablet.png");
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%), url("../img/index/index1-tablet.png");
+  .hero__swiper-content--third .hero__title {
+    padding: 30px 40px 20px;
+  }
+
+  .header-nav__menu-list--is-open .hero__swiper-content--third .header-nav__menu-list--is-open .hero__swiper-content--third,
+  .header-nav__menu--is-open .hero__swiper-content--third,
+  .header-nav--is-open .hero__swiper-content--third {
+    background-image: rgba(13, 29, 51, 0.4), url("../img/index/index1-tablet.png");
   }
 
   .hero__swiper-block {
@@ -6488,7 +6531,7 @@ button,
   .hero__title {
     max-width: 97.2%;
     min-height: 136px;
-    padding: 30px 40px 20px;
+    padding: 35px 40px 20px;
   }
 
   .hero__title h2 {
@@ -7108,7 +7151,7 @@ button,
   }
 
   .masa-modal__container {
-    width: 74.1%;
+    width: 100%;
     max-width: unset;
     min-height: 510px;
     padding: 55px 80px 60px;
@@ -7142,20 +7185,21 @@ button,
 
 @media (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 1199px) and (min-resolution: 144dpi), (max-width: 1199px) and (min-resolution: 1.5dppx) {
   .hero__swiper-content--first {
-    background-image: url("../img/index/index3-tablet@2x.png");
+    background-image: url("../img/index/index2-tablet@2x.png");
   }
 
   .hero__swiper-content--second {
-    background-image: url("../img/index/index2-tablet@2x.png");
+    background-image: url("../img/index/index3-tablet@2x.png");
   }
 
   .hero__swiper-content--third {
     background-image: url("../img/index/index1-tablet@2x.png");
   }
 
-  .header-nav__menu-list--is-open .hero__swiper-content--third {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.75)), color-stop(75%, rgba(0, 0, 0, 0))), url("../img/index/index1-tablet@2x.png");
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%), url("../img/index/index1-tablet@2x.png");
+  .header-nav__menu-list--is-open .hero__swiper-content--third .header-nav__menu-list--is-open .hero__swiper-content--third,
+  .header-nav__menu--is-open .hero__swiper-content--third,
+  .header-nav--is-open .hero__swiper-content--third {
+    background-image: rgba(13, 29, 51, 0.4), url("../img/index/index1-tablet@2x.png");
   }
 
   .programms__swiper-slide--first {
@@ -7214,20 +7258,29 @@ button,
   }
 
   .hero__swiper-content--first {
-    background-image: url("../img/index/index3-mobile.png");
+    background-image: url("../img/index/index2-mobile.png");
   }
 
   .hero__swiper-content--second {
-    background-image: url("../img/index/index2-mobile.png");
+    background-image: url("../img/index/index3-mobile.png");
+  }
+
+  .hero__swiper-content--second .hero__button {
+    margin-top: 0;
   }
 
   .hero__swiper-content--third {
     background-image: url("../img/index/index1-mobile.png");
   }
 
-  .header-nav__menu-list--is-open .hero__swiper-content--third {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.75)), color-stop(75%, rgba(0, 0, 0, 0))), url("../img/index/index1-mobile.png");
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%), url("../img/index/index1-mobile.png");
+  .hero__swiper-content--third .hero__title {
+    padding: 20px 14px 10px;
+  }
+
+  .header-nav__menu-list--is-open .hero__swiper-content--third .header-nav__menu-list--is-open .hero__swiper-content--third,
+  .header-nav__menu--is-open .hero__swiper-content--third,
+  .header-nav--is-open .hero__swiper-content--third {
+    background-image: rgba(13, 29, 51, 0.4), url("../img/index/index1-mobile.png");
   }
 
   .hero__swiper-block {
@@ -7298,6 +7351,10 @@ button,
     border-radius: 0 0 14px 0;
   }
 
+  .hero__text--second {
+    margin-top: 0;
+  }
+
   .hero__text p {
     font-size: 4.3vw;
     line-height: 6.25vw;
@@ -7346,7 +7403,15 @@ button,
     padding: 0 16px 0 14px;
   }
 
-  .header__overlay .header-nav__menu-list--is-open {
+  .header__overlay .header-nav__menu-list--is-open,
+  .header__overlay .header-nav__menu--is-open,
+  .header__overlay .header-nav--is-open {
+    top: -20px;
+  }
+
+  .hero .header-nav__menu-list--is-open,
+  .hero .header-nav__menu--is-open,
+  .hero .header-nav--is-open {
     top: -20px;
   }
 
@@ -8061,7 +8126,6 @@ button,
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    gap: 5px;
   }
 
   .contacts__item {
@@ -8304,20 +8368,21 @@ button,
 
 @media (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 767px) and (min-resolution: 144dpi), (max-width: 767px) and (min-resolution: 1.5dppx) {
   .hero__swiper-content--first {
-    background-image: url("../img/index/index3-mobile@2x.png");
+    background-image: url("../img/index/index2-mobile@2x.png");
   }
 
   .hero__swiper-content--second {
-    background-image: url("../img/index/index2-mobile@2x.png");
+    background-image: url("../img/index/index3-mobile@2x.png");
   }
 
   .hero__swiper-content--third {
     background-image: url("../img/index/index1-mobile@2x.png");
   }
 
-  .header-nav__menu-list--is-open .hero__swiper-content--third {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.75)), color-stop(75%, rgba(0, 0, 0, 0))), url("../img/index/index1-mobile@2x.png");
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%), url("../img/index/index1-mobile@2x.png");
+  .header-nav__menu-list--is-open .hero__swiper-content--third .header-nav__menu-list--is-open .hero__swiper-content--third,
+  .header-nav__menu--is-open .hero__swiper-content--third,
+  .header-nav--is-open .hero__swiper-content--third {
+    background-image: rgba(13, 29, 51, 0.4), url("../img/index/index1-mobile@2x.png");
   }
 
   .programms__swiper-slide--first {
@@ -8333,10 +8398,14 @@ button,
   }
 }
 
-@media print {
-  .leaflet-control {
-    -webkit-print-color-adjust: exact;
-    print-color-adjust: exact;
+@media (min-width: 321px) and (max-width: 767px) {
+  .form__checkbox:last-of-type {
+    padding-left: 25%;
+  }
+
+  .custom-toggle--checkbox .form__toggle-icon,
+  .custom-toggle--radio .form__toggle-icon {
+    top: 6px;
   }
 }
 
@@ -8347,29 +8416,32 @@ button,
 
   .custom-select__item[aria-selected=true]:hover:not(.focus-visible) {
     color: rgb(49, 109, 194);
+    background-color: #ffffff;
   }
 
   .custom-select__item:hover:not(.focus-visible) {
     color: rgb(49, 109, 194);
+    background-color: #ffffff;
   }
 }
 
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
   .hero__swiper-content--first {
-    background-image: url("../img/index/index3-desktop@2x.png");
+    background-image: url("../img/index/index2-desktop@2x.png");
   }
 
   .hero__swiper-content--second {
-    background-image: url("../img/index/index2-desktop@2x.png");
+    background-image: url("../img/index/index3-desktop@2x.png");
   }
 
   .hero__swiper-content--third {
     background-image: url("../img/index/index1-desktop@2x.png");
   }
 
-  .header-nav__menu-list--is-open .hero__swiper-content--third {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.75)), color-stop(75%, rgba(0, 0, 0, 0))), url("../img/index/index1-desktop@2x.png");
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%), url("../img/index/index1-desktop@2x.png");
+  .header-nav__menu-list--is-open .hero__swiper-content--third .header-nav__menu-list--is-open .hero__swiper-content--third,
+  .header-nav__menu--is-open .hero__swiper-content--third,
+  .header-nav--is-open .hero__swiper-content--third {
+    background-image: rgba(13, 29, 51, 0.4), url("../img/index/index1-desktop@2x.png");
   }
 
   .programms__swiper-slide--first {
